pkg/query/parser/query_parser.go
// Code generated from /Users/i322053/goworkspace/src/github.com/Peripli/service-manager/pkg/query/Query.g4 by ANTLR 4.7.2. DO NOT EDIT.

package parser // Query

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa


var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'and'", "'['", "']'",
}
var symbolicNames = []string{
	"", "", "", "", "MultiOp", "UniOp", "Key", "Value", "ValueSeparator", "WS",
}

var ruleNames = []string{
	"expression", "criterion", "multivariate", "univariate", "multiValues", 
	"manyValues",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type QueryParser struct {
	*antlr.BaseParser
}

func NewQueryParser(input antlr.TokenStream) *QueryParser {
	this := new(QueryParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Query.g4"

	return this
}

// QueryParser tokens.
const (
	QueryParserEOF = antlr.TokenEOF
	QueryParserT__0 = 1
	QueryParserT__1 = 2
	QueryParserT__2 = 3
	QueryParserMultiOp = 4
	QueryParserUniOp = 5
	QueryParserKey = 6
	QueryParserValue = 7
	QueryParserValueSeparator = 8
	QueryParserWS = 9
)

// QueryParser rules.
const (
	QueryParserRULE_expression = 0
	QueryParserRULE_criterion = 1
	QueryParserRULE_multivariate = 2
	QueryParserRULE_univariate = 3
	QueryParserRULE_multiValues = 4
	QueryParserRULE_manyValues = 5
)

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QueryParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) Criterion() ICriterionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICriterionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICriterionContext)
}

func (s *ExpressionContext) EOF() antlr.TerminalNode {
	return s.GetToken(QueryParserEOF, 0)
}

func (s *ExpressionContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterExpression(s)
	}
}

func (s *ExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitExpression(s)
	}
}




func (p *QueryParser) Expression() (localctx IExpressionContext) {
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, QueryParserRULE_expression)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(12)
		p.Criterion()
	}
	p.SetState(15)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	if _la == QueryParserT__0 {
		{
			p.SetState(13)
			p.Match(QueryParserT__0)
		}
		{
			p.SetState(14)
			p.Expression()
		}

	}
	{
		p.SetState(17)
		p.Match(QueryParserEOF)
	}



	return localctx
}


// ICriterionContext is an interface to support dynamic dispatch.
type ICriterionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCriterionContext differentiates from other interfaces.
	IsCriterionContext()
}

type CriterionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCriterionContext() *CriterionContext {
	var p = new(CriterionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QueryParserRULE_criterion
	return p
}

func (*CriterionContext) IsCriterionContext() {}

func NewCriterionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CriterionContext {
	var p = new(CriterionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_criterion

	return p
}

func (s *CriterionContext) GetParser() antlr.Parser { return s.parser }

func (s *CriterionContext) Multivariate() IMultivariateContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMultivariateContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMultivariateContext)
}

func (s *CriterionContext) Univariate() IUnivariateContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnivariateContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnivariateContext)
}

func (s *CriterionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CriterionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *CriterionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterCriterion(s)
	}
}

func (s *CriterionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitCriterion(s)
	}
}




func (p *QueryParser) Criterion() (localctx ICriterionContext) {
	localctx = NewCriterionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, QueryParserRULE_criterion)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(21)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(19)
			p.Multivariate()
		}


	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(20)
			p.Univariate()
		}

	}


	return localctx
}


// IMultivariateContext is an interface to support dynamic dispatch.
type IMultivariateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMultivariateContext differentiates from other interfaces.
	IsMultivariateContext()
}

type MultivariateContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMultivariateContext() *MultivariateContext {
	var p = new(MultivariateContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QueryParserRULE_multivariate
	return p
}

func (*MultivariateContext) IsMultivariateContext() {}

func NewMultivariateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MultivariateContext {
	var p = new(MultivariateContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_multivariate

	return p
}

func (s *MultivariateContext) GetParser() antlr.Parser { return s.parser }

func (s *MultivariateContext) Key() antlr.TerminalNode {
	return s.GetToken(QueryParserKey, 0)
}

func (s *MultivariateContext) MultiOp() antlr.TerminalNode {
	return s.GetToken(QueryParserMultiOp, 0)
}

func (s *MultivariateContext) MultiValues() IMultiValuesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMultiValuesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMultiValuesContext)
}

func (s *MultivariateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MultivariateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *MultivariateContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterMultivariate(s)
	}
}

func (s *MultivariateContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitMultivariate(s)
	}
}




func (p *QueryParser) Multivariate() (localctx IMultivariateContext) {
	localctx = NewMultivariateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, QueryParserRULE_multivariate)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(23)
		p.Match(QueryParserKey)
	}
	{
		p.SetState(24)
		p.Match(QueryParserMultiOp)
	}
	{
		p.SetState(25)
		p.MultiValues()
	}



	return localctx
}


// IUnivariateContext is an interface to support dynamic dispatch.
type IUnivariateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUnivariateContext differentiates from other interfaces.
	IsUnivariateContext()
}

type UnivariateContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnivariateContext() *UnivariateContext {
	var p = new(UnivariateContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QueryParserRULE_univariate
	return p
}

func (*UnivariateContext) IsUnivariateContext() {}

func NewUnivariateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnivariateContext {
	var p = new(UnivariateContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_univariate

	return p
}

func (s *UnivariateContext) GetParser() antlr.Parser { return s.parser }

func (s *UnivariateContext) Key() antlr.TerminalNode {
	return s.GetToken(QueryParserKey, 0)
}

func (s *UnivariateContext) UniOp() antlr.TerminalNode {
	return s.GetToken(QueryParserUniOp, 0)
}

func (s *UnivariateContext) Value() antlr.TerminalNode {
	return s.GetToken(QueryParserValue, 0)
}

func (s *UnivariateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnivariateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *UnivariateContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterUnivariate(s)
	}
}

func (s *UnivariateContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitUnivariate(s)
	}
}




func (p *QueryParser) Univariate() (localctx IUnivariateContext) {
	localctx = NewUnivariateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, QueryParserRULE_univariate)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(27)
		p.Match(QueryParserKey)
	}
	{
		p.SetState(28)
		p.Match(QueryParserUniOp)
	}
	{
		p.SetState(29)
		p.Match(QueryParserValue)
	}



	return localctx
}


// IMultiValuesContext is an interface to support dynamic dispatch.
type IMultiValuesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMultiValuesContext differentiates from other interfaces.
	IsMultiValuesContext()
}

type MultiValuesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMultiValuesContext() *MultiValuesContext {
	var p = new(MultiValuesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QueryParserRULE_multiValues
	return p
}

func (*MultiValuesContext) IsMultiValuesContext() {}

func NewMultiValuesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MultiValuesContext {
	var p = new(MultiValuesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_multiValues

	return p
}

func (s *MultiValuesContext) GetParser() antlr.Parser { return s.parser }

func (s *MultiValuesContext) ManyValues() IManyValuesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IManyValuesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IManyValuesContext)
}

func (s *MultiValuesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MultiValuesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *MultiValuesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterMultiValues(s)
	}
}

func (s *MultiValuesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitMultiValues(s)
	}
}




func (p *QueryParser) MultiValues() (localctx IMultiValuesContext) {
	localctx = NewMultiValuesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, QueryParserRULE_multiValues)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(31)
		p.Match(QueryParserT__1)
	}
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	if _la == QueryParserValue {
		{
			p.SetState(32)
			p.ManyValues()
		}

	}
	{
		p.SetState(35)
		p.Match(QueryParserT__2)
	}



	return localctx
}


// IManyValuesContext is an interface to support dynamic dispatch.
type IManyValuesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsManyValuesContext differentiates from other interfaces.
	IsManyValuesContext()
}

type ManyValuesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyManyValuesContext() *ManyValuesContext {
	var p = new(ManyValuesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QueryParserRULE_manyValues
	return p
}

func (*ManyValuesContext) IsManyValuesContext() {}

func NewManyValuesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ManyValuesContext {
	var p = new(ManyValuesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_manyValues

	return p
}

func (s *ManyValuesContext) GetParser() antlr.Parser { return s.parser }

func (s *ManyValuesContext) Value() antlr.TerminalNode {
	return s.GetToken(QueryParserValue, 0)
}

func (s *ManyValuesContext) ValueSeparator() antlr.TerminalNode {
	return s.GetToken(QueryParserValueSeparator, 0)
}

func (s *ManyValuesContext) ManyValues() IManyValuesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IManyValuesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IManyValuesContext)
}

func (s *ManyValuesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ManyValuesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ManyValuesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterManyValues(s)
	}
}

func (s *ManyValuesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitManyValues(s)
	}
}




func (p *QueryParser) ManyValues() (localctx IManyValuesContext) {
	localctx = NewManyValuesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, QueryParserRULE_manyValues)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(37)
		p.Match(QueryParserValue)
	}
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	if _la == QueryParserValueSeparator {
		{
			p.SetState(38)
			p.Match(QueryParserValueSeparator)
		}
		{
			p.SetState(39)
			p.ManyValues()
		}

	}



	return localctx
}


